# solmate-math-fuzz

./: .gitmodules  Cargo.toml  Readme.org  foundry.toml
notes/: badnums.org  ranges.org
src/: Fuzz.sol  float.rs  main.rs  rng.rs  wadmath.rs
