[package]
name = "solmate-math-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.13.0"
eyre = "0.6.8"
tokio = { version = "1.19.2", features = ["full"] }
ethers-middleware = "0.13.0"
serde_json = "1.0.82"
rug = "1.16.0"
lazy_static = "1.4.0"
rand = "0.8.5"
clap = { version = "3.2.8", features = ["derive"] }
k256 = "0.10.4"
hex = "0.4.3"
